Fix scrollbars

--- a/src/assets/scss/App.scss
+++ b/src/assets/scss/App.scss
@@ -3,6 +3,7 @@ $border-color: red;
 
 body{
   margin: 0;
+  overflow: hidden;
 
 }
 
